--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port= 8087
 
 # H2 Database
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:dcbapp
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
